[package]
name = "twilio_webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
chrono = "0.4.23"
crypto = { version = "0.4.0", features = ["digest", "cipher", "std"] }
hmac = "0.12.1"
sha1 = "0.10.5"
url = { version = "2.3.1", features = ["serde"] }
